[gd_scene load_steps=5 format=3 uid="uid://digslbvxagti1"]

[ext_resource type="Texture2D" uid="uid://clnkt4t3y107e" path="res://assets/backgrounds/spr_stars01.png" id="1_5rdb8"]
[ext_resource type="Script" path="res://level_bg/level_bg.gd" id="1_jxow5"]
[ext_resource type="Texture2D" uid="uid://dost874gunh87" path="res://assets/backgrounds/spr_stars00.png" id="2_ikanj"]
[ext_resource type="Texture2D" uid="uid://vj4up5a0r3gd" path="res://assets/backgrounds/spr_stars02.png" id="2_t25mx"]

[node name="LevelBg" type="ParallaxBackground"]
script = ExtResource("1_jxow5")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ParallaxLayer0" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2(0, 1280)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxLayer0"]
position = Vector2(320, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_ikanj")

[node name="ParallaxLayer1" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2(0, 2560)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxLayer1"]
texture = ExtResource("1_5rdb8")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2(0, 2560)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxLayer2"]
texture = ExtResource("2_t25mx")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="."]
motion_offset = Vector2(0, 600)
motion_mirroring = Vector2(0, 2560)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxLayer3"]
texture = ExtResource("2_t25mx")
